Revision history for Net-STOMP-Client:

1.7	Mon Jul  2 2012
	* Improved SSL support by handling situations where select()
	  claims that there is nothing to read although there is.

1.6	Mon Jun 25 2012
	* Net::STOMP::Client::Frame: minor encoding speed improvements.
	* Net::STOMP::Client: the disconnect() method now handles receipts.
	* Preserve $@ when calling Encode::encode() or Encode::decode().

1.5	Tue Feb 28 2012
	* Improved the documentation wrt failover support id (RT#74738).
	* Added a server() method to access the CONNECTED frame's server header.

1.4	Fri Jan 27 2012
	* Improved the documentation wrt subscription id (RT#73060).
	* Improved ActiveMQ failover URI support.

1.3	Wed Nov 23 2011
	* Fixed our use of isa() (RT#71520).
	* Added support for Messaging::Message (this module is optional).
	* Improved error handling.

1.2	Tue Sep 27 2011
	* Net::STOMP::Client::Frame: the frame parsing, decoding and encoding
	  code is now documented and can be used outside of this module.
	* Improved frame debugging to really show what has been sent/received.
	* Net::STOMP::Client::Frame: removed the debug() method.
	* Fixed typo (RT#69417).
	* Improved session id handling in cases where the session header is
	  missing from the CONNECTED frame (it is optional wrt the spec).
	* Net::STOMP::Client: the send() method can now take a body reference.

1.1	Fri Jun 24 2011
	* Net::STOMP::Client::Frame: added a body_reference() method
	  to avoid string copies when manipulating large bodies.
	* Greatly improved the overall performance (~4 times faster),
	  mainly by reducing string copies, improving frame parsing
	  and minimizing syscalls in the I/O layer.
	* Added several methods to Net::STOMP::Client to get better
	  performance, see the "EFFICIENT I/O" section of the tutorial.

1.0	Tue May 10 2011
	* Promoted to 1.0 after successful testing.
	* The API is now stable.
	* The module $VERSION variables now contain the package version
          (RT#67227).
